Fixed gaps when error messages are empty

--- a/sass/form/_form.scss
+++ b/sass/form/_form.scss
@@ -155,6 +155,9 @@
         }
         > p:not(:last-of-type) {
             margin-block: initial;
+            .error-message:empty {
+                margin-block-start: calc(-1 * var(--contact-form-field-gap));
+            }
         }
         ul {
             display: flex;
@@ -162,6 +165,13 @@
         }
         li {
             flex: 1;
+            margin-block: initial;
+        }
+        fieldset {
+            ul,
+            p:not(:empty) {
+                margin-block-start: var(--contact-form-checkbox-gap);
+            }
         }
     }
     @include css-media-queries($from-breakpoint: standalone-form) {
